Primer commit para guardar

--- a/bibliografia.html
+++ b/bibliografia.html
@@ -6,6 +6,21 @@
     <title>Bibliografia - GiancarloCordova</title>
 </head>
 <body>
-    <h1>Aqui presento mi Bibliografia</h1>
+    <h1>AutoBiografia - Giancarlo Cordova</h1>
+
+    <h3>Me presento, mi nombre completo es Giancarlo Sebastian Cordova Garcia, tengo 17 años y naci el 30 de enero del 2008.</h3>
+    <h3>Actualmente estudio en el Centro Educativo Tecnico Laboral Kinal en la carrera de Perrito en Informatica, cursando el 3er año de carrera.</h3>
+
+
+    <h3>Desde pequeño eh vivido mi vida normal, afortunadamente sin ningun inconveniente, siempre eh vivido con mi familia completa, mis padres</h3>
+    <h3> y mi hermana, no me ha faltado nada</h3>
+    <h3>hasta el momento.</h3>
+
+    <h3>No eh tenido ningun problema grave a lo largo de mi vida, talvez solo si considero esa vez que enferme gravemente, teniendo que quedarme hospitalizado, pero </h3>
+    <h3>al final termine recuperandome, y asi espero que sea el resto que me queda de vida.</h3>
+
+    <ul>
+        <li><a href="index.html"><h3>Regresar</h3></a></li>
+    </ul>
 </body>
 </html>
