--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Aqui se detallaran algunas cosas sobre mi tales como:</h2>
     <ol>
     <ul>
-        <li><h3>Gustos:</h3></li>
+        <li><h3>Gustos (Cosas Favoritas):</h3></li>
         <h4>Color: Rojo / Comida: Pizza / Juego: Minecraft</h4>
         <li><h3>Como distrubuyo mi tiempo:</h3></li>
         <h4>Entre semana desde que inicio el dia hasta las 12 Me preparo y voy al colegio, luego almuerzo, y a las 3 si tengo algun</h4>
@@ -22,9 +22,9 @@
 
     <h2>Y aqui estaran los botones para ir a ver las siguientes cosas:</h2>
     <ul>
-        <li><h3>Bibliografia:</h3></li>
+        <li><a href="bibliografia.html"><h3>Bibliografia</h3></a></li>
 
-        <li><h3>Sugerencias para mejorar la pagina de Kinal:</h3></li>
+        <li><a href="kinal.html"><h3>Sugerencias para mejorar la pagina de Kinal:</h3></a></li>
     </ul>
 </body>
 </html>
