--- a/kinal.html
+++ b/kinal.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Aqui presentare las sugerencias que considero para mejorar la Pagina de Kinal</h1>
+
+    <ul>
+        <li><a href="index.html"><h3>Regresar</h3></a></li>
+    </ul>
 </body>
 </html>
