Se sigue modificando la 3ra pagina para asi seguir con el estilo de todas la paginas

--- a/kinal.html
+++ b/kinal.html
@@ -8,6 +8,26 @@
 <body>
     <h1>Aqui presentare las sugerencias que considero para mejorar la Pagina de Kinal</h1>
 
+    <ol>
+        <li><h3>Primero diria que es importante cambiar los colores de la pagina, se sabe que los colores usados son los que representan a la fundacion por asi decirlo</h3>
+            <h3>pero estaria bien cambiarlos a colores que combienen entre si. Aqui dejo unos ejemplos:</h3></li>
+    </ol>
+    <img src="img/paleta-de-colores-1.webp" alt="Ejemplo 1" width="400">
+
+    <ol>
+        <li><h3>Segundo diria que es importante cambiar los colores de la pagina, se sabe que los colores usados son los que representan a la fundacion por asi decirlo</h3>
+            <h3>pero estaria bien cambiarlos a colores que combienen entre si. Aqui dejo unos ejemplos:</h3></li>
+    </ol>
+    <img src="img/paleta-de-colores-1.webp" alt="Ejemplo 1" width="400">
+
+    <ol>
+        <li><h3>Tercero diria que es importante cambiar los colores de la pagina, se sabe que los colores usados son los que representan a la fundacion por asi decirlo</h3>
+            <h3>pero estaria bien cambiarlos a colores que combienen entre si. Aqui dejo unos ejemplos:</h3></li>
+    </ol>
+    <img src="img/paleta-de-colores-1.webp" alt="Ejemplo 1" width="400">
+
+    
+
     <ul>
         <li><a href="index.html"><h3>Regresar</h3></a></li>
     </ul>
