Se termino el contenido de las paginas web para asi pasar con el diseño

--- a/bibliografia.html
+++ b/bibliografia.html
@@ -13,11 +13,14 @@
 
 
     <h3>Desde pequeño eh vivido mi vida normal, afortunadamente sin ningun inconveniente, siempre eh vivido con mi familia completa, mis padres</h3>
-    <h3> y mi hermana, no me ha faltado nada</h3>
-    <h3>hasta el momento.</h3>
+    <h3> y mi hermana, no me ha faltado nada hasta el momento.</h3>
+
+    <h3>Siempre eh sido algo timido para todo, para conocer y hablar con personas, para pedir cosas etc. Y eso me a costado caro en algunas ocaciones en las que termino</h3>
+    <h3>avergonzado por mas de una cosa, pero con el tiempo eh aprendido que pues en algun momento tengo que dejar la timidez para avanzar ya que como dije, esto de ser timido</h3>
+    <h3>me hacer ser alguien muy limitado por asi decirlo.</h3>
 
     <h3>No eh tenido ningun problema grave a lo largo de mi vida, talvez solo si considero esa vez que enferme gravemente, teniendo que quedarme hospitalizado, pero </h3>
-    <h3>al final termine recuperandome, y asi espero que sea el resto que me queda de vida.</h3>
+    <h3>al final termine recuperandome de eso y de otras cosas, y asi espero que siga asi el resto que me queda de vida.</h3>
 
     <ul>
         <li><a href="index.html"><h3>Regresar</h3></a></li>
