--- a/kinal.html
+++ b/kinal.html
@@ -11,21 +11,17 @@
     <ol>
         <li><h3>Primero diria que es importante cambiar los colores de la pagina, se sabe que los colores usados son los que representan a la fundacion por asi decirlo</h3>
             <h3>pero estaria bien cambiarlos a colores que combienen entre si. Aqui dejo unos ejemplos:</h3></li>
-    </ol>
+
     <img src="img/paleta-de-colores-1.webp" alt="Ejemplo 1" width="400">
 
-    <ol>
-        <li><h3>Segundo diria que es importante cambiar los colores de la pagina, se sabe que los colores usados son los que representan a la fundacion por asi decirlo</h3>
-            <h3>pero estaria bien cambiarlos a colores que combienen entre si. Aqui dejo unos ejemplos:</h3></li>
-    </ol>
-    <img src="img/paleta-de-colores-1.webp" alt="Ejemplo 1" width="400">
+        <li><h3>Segundo diria que es importante cambiar el formato del calendario, ya que aveces uno quiere ver sus actividades proximas y aunque se puede ver, hay</h3>
+            <h3>veces que al haber tantos trabajos en una misma fecha, es incomodo de ver y de buscar alguna asignacion especifica .Aqui unos ejemplo practicos:</h3></li>
+    
+    <img src="img/todoist-calendar-app-design.png" alt="Ejemplo 2" width="400">
 
-    <ol>
-        <li><h3>Tercero diria que es importante cambiar los colores de la pagina, se sabe que los colores usados son los que representan a la fundacion por asi decirlo</h3>
-            <h3>pero estaria bien cambiarlos a colores que combienen entre si. Aqui dejo unos ejemplos:</h3></li>
+        <li><h3>Tercero propongo que mejoren los servidores de la pagina, es de lo mas complicado que se puede mejorar en cualquier pagina con datos pero hay que considerarlo</h3>
+            <h3>ya que a la hora de que todos nos examinamos, los servidores se saturan y dan error, lo que causa que tengamos que esperar para seguir con los examenes.</h3></li>
     </ol>
-    <img src="img/paleta-de-colores-1.webp" alt="Ejemplo 1" width="400">
-
     
 
     <ul>
