Se arreglaron algunos html para que coincidan con los css

--- a/bibliografia.html
+++ b/bibliografia.html
@@ -4,23 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bibliografia - GiancarloCordova</title>
+
+    <link rel="stylesheet" href="./styles/globals.css">
+
 </head>
 <body>
     <h1>AutoBiografia - Giancarlo Cordova</h1>
 
-    <h3>Me presento, mi nombre completo es Giancarlo Sebastian Cordova Garcia, tengo 17 años y naci el 30 de enero del 2008.</h3>
-    <h3>Actualmente estudio en el Centro Educativo Tecnico Laboral Kinal en la carrera de Perrito en Informatica, cursando el 3er año de carrera.</h3>
+    <p>
+    Me presento, mi nombre completo es Giancarlo Sebastian Cordova Garcia, 
+    tengo 17 años y nací el 30 de enero del 2008. 
+    </p>
 
+    <p>
+    Actualmente estudio en el Centro Educativo Técnico Laboral Kinal en la carrera 
+    de Perito en Informática, cursando el 3er año de carrera. He estudiado en esta fundacion
+    desde 2024, osea eh estudiado y estudiare la carrera completa aqui. Al principio me costo mucho
+    adaptarte por el tema de los salon y nuevos reglamentos que impone la fundacion, pero al fin y al cabo uno
+    termina acostumbrandose y disfrutando de las cosas que ofrece.
+    </p>
 
-    <h3>Desde pequeño eh vivido mi vida normal, afortunadamente sin ningun inconveniente, siempre eh vivido con mi familia completa, mis padres</h3>
-    <h3> y mi hermana, no me ha faltado nada hasta el momento.</h3>
+    <p>
+    Desde pequeño he vivido mi vida normal, afortunadamente sin ningún inconveniente. 
+    Siempre he vivido con mi familia completa: mis padres y mi hermana, y no me ha faltado nada hasta el momento. 
+    </p>
 
-    <h3>Siempre eh sido algo timido para todo, para conocer y hablar con personas, para pedir cosas etc. Y eso me a costado caro en algunas ocaciones en las que termino</h3>
-    <h3>avergonzado por mas de una cosa, pero con el tiempo eh aprendido que pues en algun momento tengo que dejar la timidez para avanzar ya que como dije, esto de ser timido</h3>
-    <h3>me hacer ser alguien muy limitado por asi decirlo.</h3>
+    <p>
+    Siempre he sido algo tímido para todo: para conocer y hablar con personas, 
+    para pedir cosas, etc. Eso me ha costado caro en algunas ocasiones, 
+    pero con el tiempo he aprendido que debo dejar la timidez para avanzar.
+    </p>
 
-    <h3>No eh tenido ningun problema grave a lo largo de mi vida, talvez solo si considero esa vez que enferme gravemente, teniendo que quedarme hospitalizado, pero </h3>
-    <h3>al final termine recuperandome de eso y de otras cosas, y asi espero que siga asi el resto que me queda de vida.</h3>
+    <p>
+    No he tenido ningún problema grave a lo largo de mi vida, tal vez solo 
+    cuando enfermé gravemente y tuve que quedar hospitalizado por un viruas llamado "rotavirus", o algo asi, pero al final 
+    logré superarlo y solo espero que, con cualquier otra cosa que me pase, que pueda hacer los mismo por el resto de mi vida.
+    </p>
 
     <ul>
         <li><a href="index.html"><h3>Regresar</h3></a></li>
