--- a/index.html
+++ b/index.html
@@ -3,28 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GiancarloCordova - Bibliografia</title>
+    <title>GiancarloCordova - Pagina Principal</title>
+
+    <link rel="stylesheet" href="./styles/globals.css">
+
 </head>
 <body>
-    <h1>Pagina Pricipal</h1>
-    <h2>Aqui se detallaran algunas cosas sobre mi tales como:</h2>
-    <ol>
+
+    <h1>Pagina Principal</h1>
+
+    <h2>Aquí se detallarán algunas cosas sobre mí:</h2>
+
     <ul>
-        <li><h3>Gustos (Cosas Favoritas):</h3></li>
-        <h4>Color: Rojo / Comida: Pizza / Juego: Minecraft</h4>
-        <li><h3>Como distrubuyo mi tiempo:</h3></li>
-        <h4>Entre semana desde que inicio el dia hasta las 12 Me preparo y voy al colegio, luego almuerzo, y a las 3 si tengo algun</h4>
-        <h4>deber lo realizo, si no me quedo descansando hasta el final del dia.</h4>
-        <h4>El fin de semana normalmente todo el dia descanso pero dedico algun tiempo en la tarde el sabado para trabajar con alguien.</h4>
-        <li><h3>Informacion extra:</h3></li>
-        <h4>Nada que agregar</h4>
+        <li>
+            <h3>Gustos (Cosas Favoritas)</h3>
+            <p>Color: Rojo</p>
+            <p>Comida: Pizza</p>
+            <p>Juego: Minecraft</p>
+        </li>
+
+        <li>
+            <h3>Cómo distribuyo mi tiempo</h3>
+            <p>
+                Entre semana, desde que inicia el día hasta las 12, me preparo y voy al colegio.
+                Luego almuerzo y a las 3, si tengo algún deber lo realizo; si no, descanso hasta el final del día.
+            </p>
+            <p>
+                El fin de semana normalmente descanso todo el día, pero dedico algo de tiempo
+                el sábado por la tarde para trabajar con alguien.
+            </p>
+        </li>
+
+        <li>
+            <h3>Información extra</h3>
+            <p>Nada que agregar.</p>
+        </li>
     </ul>
 
     <h2>Y aqui estaran los botones para ir a ver las siguientes cosas:</h2>
-    <ul>
-        <li><a href="bibliografia.html"><h3>Bibliografia</h3></a></li>
 
-        <li><a href="kinal.html"><h3>Sugerencias para mejorar la pagina de Kinal:</h3></a></li>
+    <ul>
+        <li>
+            <a href="bibliografia.html">Bibliografía</a>
+        </li>
+        <li>
+            <a href="kinal.html">Sugerencias para mejorar la página de Kinal</a>
+        </li>
     </ul>
+
 </body>
 </html>
