Se terminaron de hacer las 3 paginas .html

--- a/kinal.html
+++ b/kinal.html
@@ -1,15 +1,138 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sugerencia Kinal</title>
+    <title>Fundacion Kinal - Formacion Tecnica Profesional</title>
+
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./layout/Header/Header.css">
+    <link rel="stylesheet" href="./layout/Footer/Footer.css">
+    <link rel="stylesheet" href="./sections/banner/Hero.css">
+    <link rel="stylesheet" href="./sections/contact/contact.css">
 </head>
 <body>
-        
+
+    <div class="top-bar">
+        <div class="container-top">
+            <span>PBX: 2384-2000 | WhatsApp: 2216-0090</span>
+            <div class="top-links">
+                <a href="#">Bolsa de Empleo</a>
+                <a href="#">Portal de Pagos</a>
+                <a href="#">Sugerencias</a>
+            </div>
+        </div>
+    </div>
+
+    <nav class="nav-kinal">
+        <div class="nav-content">
+            <a href="#inicio" class="nav-link">Inicio</a>
+            <a href="#nosotros" class="nav-link">Quienes Somos</a>
+            <a href="#programas" class="nav-link">Programas</a>
+            <a href="#admisiones" class="nav-link">Admisiones 2024</a>
+            <a href="#contacto" class="nav-link">Contacto</a>
+        </div>
+    </nav>
+
+    <header class="header-kinal" id="inicio">
+        <div class="header-overlay">
+            <h1>Fundacion Kinal</h1>
+            <p class="slogan">Tu camino al exito esta en Kinal</p>
+            <p class="description">
+                Somos un centro educativo no lucrativo que desde 1961 forma tecnicos de excelencia 
+                con valores humanos, promoviendo el desarrollo profesional en Guatemala.
+            </p>
+            <div class="header-actions">
+                <a href="#programas" class="btn-inscribete">Explorar Carreras</a>
+                <a href="#contacto" class="btn-donar">Mas Informacion</a>
+            </div>
+        </div>
+    </header>
+
+    <section class="seccion-importante" id="contacto">
+        <div class="info-box">
+            <h3>Ubicacion Central</h3>
+            <p>6a avenida 13-54, zona 7, Colonia Landivar, Ciudad de Guatemala.</p>
+            <small>Lunes a Viernes: 07:00 - 16:00</small>
+        </div>
+        <div class="info-box accent-box">
+            <h3>Consultas Academicas</h3>
+            <p>kinalitos@kinal.org.gt<br>inscripciones@kinal.edu.gt</p>
+            <small>Respuesta en menos de 24 horas</small>
+        </div>
+        <div class="info-box">
+            <h3>Oportunidades</h3>
+            <p>empleos@kinal.edu.gt</p>
+            <p>Buscas talento tecnico? Contactanos!</p>
+        </div>
+    </section>
+
+    <section class="programas" id="programas">
+        <h2 class="section-title">Nuestra Oferta Educativa</h2>
+        <div class="cards">
+            <div class="card-kinal">
+                <div class="card-img" style="background-color: #e0e0e0;">[Tecnicos]</div>
+                <h3>Peritos Tecnicos</h3>
+                <p>Especialidades en Electricidad, Mecanica, Electronica y Dibujo con bachillerato incluido.</p>
+                <button class="card-btn">Ver Detalles</button>
+            </div>
+            <div class="card-kinal">
+                <div class="card-img" style="background-color: #d0d0d0;">[Basicos]</div>
+                <h3>Ciclo Basico</h3>
+                <p>Formacion integral para jovenes con talleres tecnicos desde el primer ano.</p>
+                <button class="card-btn">Ver Detalles</button>
+            </div>
+            <div class="card-kinal">
+                <div class="card-img" style="background-color: #c0c0c0;">[Tecnologia]</div>
+                <h3>Cursos Tecnicos</h3>
+                <p>Capacitacion para adultos en Gastronomia, Soldadura, Computacion y mas.</p>
+                <button class="card-btn">Ver Detalles</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="nosotros" id="nosotros" style="padding: 50px 20px; background: white; text-align: center;">
+        <div style="max-width: 900px; margin: 0 auto;">
+            <h2 style="color: var(--azul-kinal);">Valores que Transforman</h2>
+            <p>
+                Kinal es mas que educacion tecnica; es formacion humana basada en el respeto,
+                el trabajo bien hecho y el espiritu de servicio. Ayudamos a cada estudiante
+                a alcanzar su maximo potencial.
+            </p>
+        </div>
+    </section>
+
+    <footer class="footer-kinal">
+        <div class="footer-grid">
+            <div class="footer-col">
+                <h4>Sobre Kinal</h4>
+                <p>Institucion lider en formacion tecnica profesional en Guatemala, con mas de seis decadas de trayectoria.</p>
+            </div>
+            <div class="footer-col">
+                <h4>Enlaces Rapidos</h4>
+                <ul>
+                    <li><a href="#">Admisiones</a></li>
+                    <li><a href="#">Bolsa de Trabajo</a></li>
+                    <li><a href="#">Preguntas Frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Redes Sociales</h4>
+                <p>Siguenos y se parte de nuestra comunidad!</p>
+                <div class="social-icons">
+                    <span>Facebook</span> | <span>Instagram</span>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2024 Fundacion Kinal - Todos los derechos reservados.</p>
+        </div>
+    </footer>
 
     <ul>
         <li><a href="index.html"><h3>Regresar</h3></a></li>
     </ul>
+
 </body>
 </html>
