Se agrego un poco mas de informacion a las paginas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
         <li>
             <h3>Información extra</h3>
-            <p>Nada que agregar.</p>
+            <p>Mido como 1.70m.</p>
+            <p>Le llevo 3 años a mi hermana.</p>
+            <p>Me rompi el brazo el dia que hiba a ir a una excursion buenisima en un antiguo colegio por culpa de un compañero.</p>
         </li>
     </ul>
 
