Se termino de agregar unos detalles a la pagina de index y bibliografia

--- a/bibliografia.html
+++ b/bibliografia.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bibliografia - GiancarloCordova</title>
-
-    <link rel="stylesheet" href="./styles/globals.css">
-
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    <h1>AutoBiografia - Giancarlo Cordova</h1>
 
-    <p>
-    Me presento, mi nombre completo es Giancarlo Sebastian Cordova Garcia, 
-    tengo 17 años y nací el 30 de enero del 2008. 
-    </p>
+    <div class="container">
+        <h1>AutoBiografia - Giancarlo Cordova</h1>
 
-    <p>
-    Actualmente estudio en el Centro Educativo Técnico Laboral Kinal en la carrera 
-    de Perito en Informática, cursando el 3er año de carrera. He estudiado en esta fundacion
-    desde 2024, osea eh estudiado y estudiare la carrera completa aqui. Al principio me costo mucho
-    adaptarte por el tema de los salon y nuevos reglamentos que impone la fundacion, pero al fin y al cabo uno
-    termina acostumbrandose y disfrutando de las cosas que ofrece.
-    </p>
+        <div style="margin-bottom: 30px;">
+            <p>
+                Me presento, mi nombre completo es Giancarlo Sebastian Cordova Garcia, 
+                tengo 17 años y nací el 30 de enero del 2008. 
+            </p>
 
-    <p>
-    Desde pequeño he vivido mi vida normal, afortunadamente sin ningún inconveniente. 
-    Siempre he vivido con mi familia completa: mis padres y mi hermana, y no me ha faltado nada hasta el momento. 
-    </p>
+            <p>
+                Actualmente estudio en el Centro Educativo Técnico Laboral Kinal en la carrera 
+                de Perito en Informática, cursando el 3er año de carrera. He estudiado en esta fundacion
+                desde 2024, osea eh estudiado y estudiare la carrera completa aqui. Al principio me costo mucho
+                adaptarte por el tema de los salon y nuevos reglamentos que impone la fundacion, pero al fin y al cabo uno
+                terminaco acostumbrándose y disfrutando de las cosas que ofrece.
+            </p>
 
-    <p>
-    Siempre he sido algo tímido para todo: para conocer y hablar con personas, 
-    para pedir cosas, etc. Eso me ha costado caro en algunas ocasiones, 
-    pero con el tiempo he aprendido que debo dejar la timidez para avanzar.
-    </p>
+            <p>
+                Desde pequeño he vivido mi vida normal, afortunadamente sin ningún inconveniente. 
+                Siempre he vivido con mi familia completa: mis padres y mi hermana, y no me ha faltado nada hasta el momento. 
+            </p>
 
-    <p>
-    No he tenido ningún problema grave a lo largo de mi vida, tal vez solo 
-    cuando enfermé gravemente y tuve que quedar hospitalizado por un viruas llamado "rotavirus", o algo asi, pero al final 
-    logré superarlo y solo espero que, con cualquier otra cosa que me pase, que pueda hacer los mismo por el resto de mi vida.
-    </p>
+            <p>
+                Siempre he sido algo tímido para todo: para conocer y hablar con personas, 
+                para pedir cosas, etc. Eso me ha costado caro en algunas ocasiones, 
+                pero con el tiempo he aprendido que debo dejar la timidez para avanzar.
+            </p>
 
-    <ul>
-        <li><a href="index.html"><h3>Regresar</h3></a></li>
-    </ul>
+            <p>
+                No he tenido ningún problema grave a lo largo de mi vida, tal vez solo 
+                cuando enfermé gravemente y tuve que quedar hospitalizado por un viruas llamado "rotavirus", o algo asi, pero al final 
+                logré superarlo y solo espero que, con cualquier otra cosa que me pase, que pueda hacer los mismo por el resto de mi vida.
+            </p>
+        </div>
+
+        <div style="text-align: center;">
+            <a href="index.html" class="btn">Regresar</a>
+        </div>
+    </div>
+
 </body>
 </html>
