--- a/index.html
+++ b/index.html
@@ -1,57 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GiancarloCordova - Pagina Principal</title>
-
-    <link rel="stylesheet" href="./styles/globals.css">
-
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
 
-    <h1>Pagina Principal</h1>
+    <div class="container">
+        <h1>Pagina Principal</h1>
 
-    <h2>Aquí se detallarán algunas cosas sobre mí:</h2>
+        <h2>Aquí se detallarán algunas cosas sobre mí:</h2>
 
-    <ul>
-        <li>
-            <h3>Gustos (Cosas Favoritas)</h3>
-            <p>Color: Rojo</p>
-            <p>Comida: Pizza</p>
-            <p>Juego: Minecraft</p>
-        </li>
+        <ul class="info-list">
+            <li>
+                <h3>Gustos (Cosas Favoritas)</h3>
+                <p>Color: Rojo</p>
+                <p>Comida: Pizza</p>
+                <p>Juego: Minecraft</p>
+            </li>
 
-        <li>
-            <h3>Cómo distribuyo mi tiempo</h3>
-            <p>
-                Entre semana, desde que inicia el día hasta las 12, me preparo y voy al colegio.
-                Luego almuerzo y a las 3, si tengo algún deber lo realizo; si no, descanso hasta el final del día.
-            </p>
-            <p>
-                El fin de semana normalmente descanso todo el día, pero dedico algo de tiempo
-                el sábado por la tarde para trabajar con alguien.
-            </p>
-        </li>
+            <li>
+                <h3>Cómo distribuyo mi tiempo</h3>
+                <p>
+                    Entre semana, desde que inicia el día hasta las 12, me preparo y voy al colegio.
+                    Luego almuerzo y a las 3, si tengo algún deber lo realizo; si no, descanso hasta el final del día.
+                </p>
+                <p>
+                    El fin de semana normalmente descanso todo el día, pero dedico algo de tiempo
+                    el sábado por la tarde para trabajar con alguien.
+                </p>
+            </li>
 
-        <li>
-            <h3>Información extra</h3>
-            <p>Mido como 1.70m.</p>
-            <p>Le llevo 3 años a mi hermana.</p>
-            <p>Me rompi el brazo el dia que hiba a ir a una excursion buenisima en un antiguo colegio por culpa de un compañero.</p>
-        </li>
-    </ul>
+            <li>
+                <h3>Información extra</h3>
+                <p>Mido como 1.70m.</p>
+                <p>Le llevo 3 años a mi hermana.</p>
+                <p>Me rompi el brazo el dia que hiba a ir a una excursion buenisima en un antiguo colegio por culpa de un compañero.</p>
+            </li>
+        </ul>
 
-    <h2>Y aqui estaran los botones para ir a ver las siguientes cosas:</h2>
+        <h2>Y aqui estaran los botones para ir a ver las siguientes cosas:</h2>
 
-    <ul>
-        <li>
-            <a href="bibliografia.html">Bibliografía</a>
-        </li>
-        <li>
-            <a href="kinal.html">Sugerencias para mejorar la página de Kinal</a>
-        </li>
-    </ul>
+        <div style="display: flex; gap: 10px; justify-content: center; margin-top: 20px;">
+            <a href="bibliografia.html" class="btn">Bibliografía</a>
+            <a href="kinal.html" class="btn">Sugerencias para mejorar la página de Kinal</a>
+        </div>
+    </div>
 
 </body>
 </html>
