Se agrego mas info a la bibliografia

--- a/bibliografia.html
+++ b/bibliografia.html
@@ -41,6 +41,13 @@
                 cuando enfermé gravemente y tuve que quedar hospitalizado por un viruas llamado "rotavirus", o algo asi, pero al final 
                 logré superarlo y solo espero que, con cualquier otra cosa que me pase, que pueda hacer los mismo por el resto de mi vida.
             </p>
+
+            <p>
+                Ya para mi futuro espero, bueno, si se puede, estudiar y trabajar, que aunque hasta a mi me suene muy complicado y 
+                hasta me da algo de pereza pensar en ello, se que es el mejor, o por lo menos uno de los mejores caminos que uno puede
+                tomar, tambien pues que tampoco espero ser alguien sumamente importante por asi decirlo, talvez por la presion, pero pues
+                eso no quiere decir que tampoco quiero destacar, aunque sea un poco.
+            </p>
         </div>
 
         <div style="text-align: center;">
