Se volvio a modificar el contenido de las 3 pagina para que coincidiera con lo solicitado

--- a/bibliografia.html
+++ b/bibliografia.html
@@ -48,6 +48,13 @@
                 tomar, tambien pues que tampoco espero ser alguien sumamente importante por asi decirlo, talvez por la presion, pero pues
                 eso no quiere decir que tampoco quiero destacar, aunque sea un poco.
             </p>
+
+            <p>
+                En si, planeo estudiar hasta eventualmente sacar un buen titulo para dejarlo alli, pero uno nunca deja de aprender, por lo
+                que talvez siga estudiando/sacando alguna otra habilidad extra que me ayude a hacer cosas que normalmente no se suelen 
+                resolver asi por que si, como por ejemplo saber manejar distintos lenguajes de programacion, tambien lenguajes normales 
+                por asi decirlo, y tambien diferentes sistemas operativos, pero de momento quiero salir como alguien que sabe lo que hace.
+            </p>
         </div>
 
         <div style="text-align: center;">
