--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
         <ul class="info-list">
             <li>
                 <h3>Gustos (Cosas Favoritas)</h3>
-                <p>Color: Rojo</p>
-                <p>Comida: Pizza</p>
-                <p>Juego: Minecraft</p>
+                <p>Color: Rojo, porque suele combinar con muchos otros colores.</p>
+                <p>Comida: Pizza, porque me dieron de mas cuando era mas pequeño.</p>
+                <p>Juego: Minecraft, porque creci con el.</p>
+                <p>Actividad: Salir a pasear en carro, porque siempre me gusta la vista y la sensacion, aunque pase siempre
+                   por el mismo lugar.
+                </p>
             </li>
 
             <li>
@@ -28,8 +31,12 @@
                     Luego almuerzo y a las 3, si tengo algún deber lo realizo; si no, descanso hasta el final del día.
                 </p>
                 <p>
-                    El fin de semana normalmente descanso todo el día, pero dedico algo de tiempo
+                    El fin de semana normalmente descanso todo el dia, pero dedico algo de tiempo
                     el sábado por la tarde para trabajar con alguien.
+                </p>
+                <p>
+                    Lo de salir a pasear en carro normalmente le dedico el fin de semana nada mas, aunque siempre que voy en el bus
+                    del colegio, siento la misma sensacion de cuando voy en carro.
                 </p>
             </li>
 
