--- a/kinal.html
+++ b/kinal.html
@@ -130,6 +130,24 @@
         </div>
     </footer>
 
+    <h3>Pagina web Kinal</h3>
+    <p>
+            Propuesta de diseño - Pagina Principal Fundacion Kinal
+            <p>Cambios realizados</p>
+            <p>Estas son las 5 cosas que modifique en la pagina principal:</p>
+        <ul>
+            <li>Cambio el diseño del inicio de la pagina agregando un encabezado algo mas llamativo, con un color azul encima para que el texto se vea mejor y resalte mas.</li> 
+
+            <li>Se agrego una barra de navegacion que se queda fija en la parte superior cuando el usuario baja por la pagina, asi haciendo que la navegacion dentro del sitio.</li> 
+
+            <li>Se agrego un apartado con un tipo de tarjetas donde se muestra informacion relevante como contacto, ubicacion de Kinal etc. Haciendo que esta informacion sea mas visible y facil de encontrar.</li> 
+
+            <li>Se actualizaron los colores a uno tonos mas fuertes como azul y naranja, poniendolos en botones y detalles para darle una apariencia mas moderna y juvenil.</li> 
+
+            <li>Los programas educativos se movieron a tarjetas, asi permitiendo que la pagina se vea bien tanto en computadoras como en celulares.</li> 
+        </ul>    
+    </p>
+
     <ul>
         <li><a href="index.html"><h3>Regresar</h3></a></li>
     </ul>
